--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
+        "consoletvs/charts": "^6.8",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "midtrans/midtrans-php": "^2.6"
